--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .nav{
     display: flex;
     justify-content: space-between;
-    padding: 0px 50px;
+    padding: 15px 50px;
     align-items: center;
     background-color: rgb(2, 0, 105); 
 }
@@ -21,12 +21,19 @@
 }
 .nav-links{
     display: flex;
+    background-color: rgb(41, 41, 41);
+    padding: 12px;
+    border-radius: 0.5rem;
+    gap: 1rem;
 }
 .nav-links a{
         color: white;
         text-align: center;
-        padding: 20px;
+        padding: 5px 10px;
         text-decoration: none;
         font-size: 1.5rem;
-        line-height: 25px;
+}
+.home{
+    background-color: var(--main-color) ;
+    border-radius: 0.4rem;
 }
